--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-# (string) Title of your wiki
-title: 
+# name
+title: "GeoWiki"
 # (string) Description of your wiki
-description: 
+description: "Stuff"
 # (boolean) disable edit functionalities (edit/delete/add pages)
 disable_edit: false
 # (boolean) Enable/disable wiki page list in sidebar
